<resources>
    <string name="app_name">Guess The Number</string>
    <string name="can_you_guess_it">Can you guess the number?</string>
    <string name="guess_here">Guess Here</string>
    <string name="new_game">New game</string>
    <string name="guess">guess</string>
    <string name="next_guess">Next Guess</string>
    <string name="next_level">Next level</string>

    <!--LEVELS-->
    <string name="level_1">Level 1</string>
    <string name="level_1_info">Guess the random number between 1 and 10</string>

    <string name="level_2">Level 2</string>
    <string name="level_2_info">Guess the random number between 1 and 50</string>

    <string name="level_3">Level 3</string>
    <string name="level_3_info">Guess the random number between 1 and 100</string>

    <string name="level_4">Level 4</string>
    <string name="level_4_info">Guess the random number between 1 and 500</string>

    <string name="level_5">Level 5</string>
    <string name="level_5_info">Guess the random number between 1 and 1000</string>

    <string name="level_6">Level 6</string>
    <string name="level_6_info">Guess the random number between 1 and 5000</string>

    <string name="level_7">Level 7</string>
    <string name="level_7_info">Guess the random number between 1 and 10,000</string>

    <string name="level_8">8</string>
    <string name="level_8_info">Guess the random number between 1 and 50,000</string>

    <!--NEW STRINGS-->
    <string name="high_score"><u>High Score</u></string>
    <string name="one_through">1 -</string>
    <string name="guess_the_random_number_between">Guess the random number between</string>
    <string name="hint_arrow">hint Arrow</string>
    <string name="level">Level</string>
    <string name="large_than">The number is larger than </string>
    <string name="smaller_than">The number is smaller than </string>
    <string name="you_ran_out_of_guesses">You ran out of guesses.</string>
    <string name="try_again">Try again</string>
    <string name="great_job">Great Job!!</string>
    <string name="no_record">No record set yet</string>
    <string name="title_activity_firebase_high_score">FirebaseHighScore</string>

</resources>
